fixed alignment

--- a/client/css/dialog.css
+++ b/client/css/dialog.css
@@ -176,7 +176,7 @@ dl.uiDescribe dt {
     float:left; 
     font-weight:bold; 
     margin:0 0 0 10px; 
-    padding:5px;  
+    padding:4px;  
     width:200px; 
 }
 dl.uiDescribe dd {
